modsource-817: debug with logs